# Python-Data-Core

./: .replit  PANDUAN_DATASET.md  PANDUAN_SISTEM.md  fhrr_core.py  main.py  pyproject.toml  replit.md  test_ingest.py  update_yaml.py
.jules/: bolt.md  carbo.md  engineering_journal.md
bench/: bench_cluster_pool.py  bench_mine_cooccurrence.py  bench_query_episodic.py
fhrr_project/: main.py
fhrr_project/agents/: discoverer.py  improver.py  simulation.py  text_ingestor.py
fhrr_project/core/: attention.py  engine.py  roles.py  runner.py  topology.py
fhrr_project/data/: dataset.py  ingest.py  loader.py  schema.py  vocab.py
fhrr_project/data/datasets/: default.yaml
fhrr_project/data/datasets/default/: comprehension_tasks.yaml  explanation_templates.yaml  logical_pairs.yaml  observations.yaml  qa_pairs.yaml  reasoning_patterns.yaml  teaching_episodes.yaml  vocab.yaml
fhrr_project/interface/: query_api.py  text_normalizer.py
fhrr_project/memory/: consolidation.py  knowledge_graph.py  open_vocab.py
tests/: benchmark_improver.py  test_attention.py  test_consolidation.py  test_engine_lsh.py  test_engine_opt.py  test_loader.py  test_normalizer.py  test_simulation.py  test_smoke.py  test_temporal_causation.py  test_text_ingestor.py  test_text_ingestor_heuristics.py
