[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "agents>=1.4.0",
    "data>=0.4",
    "numpy>=2.4.4",
    "python-interface>=1.6.1",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "streamlit>=1.56.0",
]
